Fix popup height due to align-items

--- a/src/scss/partials/pages/_pages.scss
+++ b/src/scss/partials/pages/_pages.scss
@@ -58,13 +58,13 @@
     }
   }
 
-  @media (max-height: 858px) {
-    height: auto;
+  // @media (max-height: 858px) {
+  //   height: auto;
 
-    /* .tabs-container > div > div {
-      height: auto;
-    } */
-  }
+  //   /* .tabs-container > div > div {
+  //     height: auto;
+  //   } */
+  // }
 
   .page-password {
     .input-wrapper {
